module/postponed/type_constructor/tests/inc/dynamic/types/wrong_kind.rs
use type_constructor as the_module;
use the_module::prelude::*;

types!
{
  wrong_kind Single : std::sync::Arc< T : Copy >;
}

fn main()
{
}
